--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
             <div class="footer_2">
                 <h4>Permalinks</h4>
                 <ul class="pagelinks">
-                    <li><a href="current.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="talents.html">TALENT</a></li>
                     <li><a href="world.html">WORLD</a></li>
                     <li><a href="future.html">FUTURE</a></li>
