--- a/world.html
+++ b/world.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
             <ul class="navbar-nav ">
               <li class="nav-item">
-                <a class="nav-link btn btn-primary btn-lg active" aria-current="page" href="current.html">HOME</a>
+                <a class="nav-link btn btn-primary btn-lg active" aria-current="page" href="index.html">HOME</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link  btn btn-warning btn-lg active" href="talents.html">TALENTS</a>
