--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="shortcut icon" href="ME.png" type="image/x-icon">
     <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Home</a>
     <link rel="stylesheet" href="index.css">
+    <!--swiper js-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <style>
 *{
     margin: 0;
@@ -162,8 +164,8 @@
               <h4>CO-CURRICULAR ACTIVITIES DONE AT MY SCHOOL</h4>
               <ol>
                   <div  id="page" class="container">
-                    <div  class="container-fluid row mx-auto">
-                      <div  class="text-center col-lg-3 col-md-4 col-12">
+                    <div  class="container-fluid row mx-auto mySwiper">
+                      <div  class="text-center col-lg-3 col-md-4 col-12 swiper-slide">
                         <li>FOOTBALL</li>
                         <img src="bugema\FOOTBALL TEAM.jpg" alt="footballteam"  width="150%" height="50%">
                       </div>
@@ -184,8 +186,7 @@
                   </div>                                     
               </ol>
             </div>
-          </div> 
-         </section>  
+          </section>  
         </div>
       </div>
 
@@ -245,6 +246,22 @@
      </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
-   
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 1,
+        spaceBetween: 30,
+        pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+        },
+        // when window width is >= 600px
+        breakpoints: {
+            600: {
+                slidesPerView: 2
+            }
+        }
+    });
+</script> 
 </body>
 </html>
