--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,10 @@
         <div  class="container">                 
             <div  class="container text-center">
               <h1 style="color: orange;">HOW YOU CAN GET TO ME</h1>
-              <p>The following emails may be used with mails, phone numbers for calls and messages and the social media platforms for chatting and any other online businesses involved</p>
+              <br><br>
+              <p>The following emails may be used with mails, phone numbers for calls and messages and the social media platforms for chatting and any other online businesses involved.</p>
+              <br><br>
+              <p>The terms and conditions should be followed respectively with associated privacy required</p>
             </div>          
         </div>       
       </section>
