--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a class="nav-link btn btn-primary btn-lg active" aria-current="page" href="index.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link btn btn-warning btn-lg active" href="talents.html">TALENTS</a>
+                <a class="nav-link active btn btn-warning btn-lg " href="talents.html">TALENTS</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link btn btn-danger btn-lg active" href="world.html">WORLD</a>
@@ -91,6 +91,12 @@
         </div>
         <div  class="col-8">
           <section  style="text-align: center; padding: 50px 150px 50px 150px ">
+            <script>
+              function headch(){
+                window.alert('Rosena is either home or at school')
+              }
+            </script>
+            <button onclick="headch()">WHY ALL THIS</button>
             <h1>MY HOME ADDRESS</h1>
             <ol>
                 <li>KIWOKO HOSPITAL</li>
